--- a/style.css
+++ b/style.css
@@ -2,3 +2,33 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-image: url(images/bg-cover.jpg);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-attachment: fixed;
+    font-family: 'Poppins', sans-serif;
+}
+
+.main-heading {
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    text-shadow: 1px 1px;
+    margin-top: 2%;
+}
+
+#person1 {
+    color: red;
+    font-size: 20px;
+}
+
+.main-portfolio {
+    margin-left: 5%;
+}
+
+.character {
+    color: aliceblue;
+    margin-left: 5%;
+}
